@@ -22,6 +22,7 @@ noinst_HEADERS = \
 	mx4200.h \
 	ntif.h \
 	ntp.h \
+	ntp_assert.h \
 	ntp_calendar.h \
 	ntp_cmdargs.h \
 	ntp_config.h \
